fix: added clear to overlapping sections

--- a/src/theme/ItaliaTheme/_common.scss
+++ b/src/theme/ItaliaTheme/_common.scss
@@ -87,6 +87,8 @@
   height: 1rem;
 }
 
-section.it-page-section {
+section.it-page-section,
+.last-modified,
+.it-page-subsection {
   clear: both;
 }
